# robocad-cpp

./: CMakeLists.txt
UnitTest/Algaritmika/: RobotHandlerFixture.cpp  RobotHandlerFixture.hpp  TestAtStartup.cpp  TestEnvironmentInteraction.cpp
UnitTest/Common/: RobotHandlerFixture.cpp  RobotHandlerFixture.hpp  TestAtStartup.cpp  TestEnvironmentInteraction.cpp
UnitTest/Studica/: RobotHandlerFixture.cpp  RobotHandlerFixture.hpp  TestAtStartup.cpp  TestEnvironmentInteraction.cpp
include/: algaritm.hpp  common.hpp  shufflecad.hpp  studica.hpp
include/internal/: algaritm_internal.hpp  common_internal.hpp
include/internal/common/: connection.hpp  connection_real.hpp  lidar.hpp  lidar_base.hpp  n10_lidar.hpp  robot.hpp  robot_configuration.hpp
src/: algaritm.cpp  common.cpp  shufflecad.cpp  studica.cpp
src/internal/: algaritm_internal.cpp  common_internal.cpp  studica_internal.cpp
src/internal/common/: connection_real.cpp  connection_sim.cpp  lidar.cpp  n10_lidar.cpp  robot.cpp
